# eframe_template

./: Cargo.toml  README.md  fill_template.sh
src/: app.rs  context.rs  lib.rs  main.rs  prelude.rs  sidepanel.rs  tab_viewer.rs
src/tabs/: log_viewer.rs  mod.rs  tab_a.rs  tab_about.rs  tab_b.rs
src/windows/: about.rs  debug.rs  log_viewer.rs  mod.rs  settings.rs
